feat(content): 实现 AI 润色功能的流式输出
- 添加 callAIEnhancementAPIStream 函数，用于流式处理 AI 增强文本
- 在处理 API 响应时，采用流式读取和处理数据
- 实现了边接收数据边更新编辑器内容的功能
- 优化了用户等待体验，内容加载更加及时

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   ],
   "host_permissions": [
     "*://bbs.nga.cn/*",
-    "*://nga.178.com/*"
+    "*://nga.178.com/*",
+    "https://api.deepseek.com/*"
   ],
   "content_scripts": [
     {
