chore(manifest): 更新扩展名称和描述为中文
- 将扩展名称改为“NGA回帖增强器”
- 更新扩展描述为“NGA论坛的AI智能润色、回复”
- 保持其他配置项不变

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "NGA Forum Enhancer",
+  "name": "NGA回帖增强器",
   "version": "1.0",
-  "description": "Enhance NGA forum experience with AI-powered post editing.",
+  "description": "NGA论坛的AI智能润色、回复",
   "permissions": [
     "activeTab",
     "storage"
